Added block comment header to all files.

--- a/src/aura/inputNumberBehavior/inputNumberBehavior.cmp
+++ b/src/aura/inputNumberBehavior/inputNumberBehavior.cmp
@@ -1,3 +1,17 @@
+<!--
+****************************************************************************************************
+* inputNumberBehavior.cmp
+****************************************************************************************************
+* This is a shared component. Do not make modifications to this component without carefully
+* considering the impact this may have on existing applications/components/pages/etc. that use this
+* component.
+*
+* @author   Eugene Oates
+* @date     2018-03-20
+* @version  1.0.0
+*
+****************************************************************************************************
+-->
 <aura:component access="GLOBAL"
                 description="Provides behavior logic for numeric inputs.">
 	<!-- attributes -->
@@ -6,22 +20,22 @@
 
 	<aura:attribute access="GLOBAL" name="max" type="Decimal"
 	                description="The maximium value allowed by the input." />
-	
+
 	<aura:attribute access="GLOBAL" name="step" type="Decimal"
 	                description="The amount by which the value is incremented when the user presses the up and down arrows." />
-	
+
 	<aura:attribute access="GLOBAL" name="precision" type="Integer"
 	                description="The total number of digits in the number (not including the decimal)." />
-	
+
 	<aura:attribute access="GLOBAL" name="scale" type="Integer"
 	                description="The number of digits to the right of the decimal point." />
-	
+
 	<aura:attribute access="GLOBAL" name="nillable" type="Boolean" default="true"
 	                description="Specifies whether the input can accept a blank input. If false and the user does not enter a value then 0 will be used (if 0 &lt; min then min will be used, if 0 &gt; max then max will be used)." />
-	
+
 	<aura:attribute access="GLOBAL" name="disabled" type="Boolean" default="false"
 	                description="Specifies whether the input is disabled." />
-	
+
 	<aura:attribute access="GLOBAL" name="readonly" type="Boolean" default="false"
 	                description="Specifies whether the input is a read-only state." />
 	<!-- /attributes -->
