--- a/src/aura/message/message.cmp
+++ b/src/aura/message/message.cmp
@@ -1,3 +1,17 @@
+<!--
+****************************************************************************************************
+* message.cmp
+****************************************************************************************************
+* This is a shared component. Do not make modifications to this component without carefully
+* considering the impact this may have on existing applications/components/pages/etc. that use this
+* component.
+*
+* @author   Eugene Oates
+* @date     2018-03-20
+* @version  1.0.0
+*
+****************************************************************************************************
+-->
 <aura:component access="GLOBAL"
                 implements="flexipage:availableForAllPageTypes"
                 description="Displays an info, success, warning, or error message.">
