--- a/src/aura/dialog/dialog.css
+++ b/src/aura/dialog/dialog.css
@@ -1,3 +1,15 @@
+/**************************************************************************************************
+ * dialog.css
+ **************************************************************************************************
+ * This is a shared component. Do not make modifications to this component without carefully
+ * considering the impact this may have on existing applications/components/pages/etc. that use this
+ * component.
+ *
+ * @author   Eugene Oates
+ * @date     2018-03-20
+ * @version  1.0.0
+ *
+ **************************************************************************************************/
 .THIS .focus-trap {
 	overflow: hidden;
 	position: absolute;
