--- a/src/aura/inputSelect/inputSelect.css
+++ b/src/aura/inputSelect/inputSelect.css
@@ -1,3 +1,15 @@
+/**************************************************************************************************
+ * inputSelect.css
+ **************************************************************************************************
+ * This is a shared component. Do not make modifications to this component without carefully
+ * considering the impact this may have on existing applications/components/pages/etc. that use this
+ * component.
+ *
+ * @author   Eugene Oates
+ * @date     2018-03-20
+ * @version  1.0.0
+ *
+ **************************************************************************************************/
 .THIS .slds-select_container:before, .THIS .slds-select_container:after {
 	pointer-events: none;
 }
