--- a/src/aura/spinnerPanel/spinnerPanel.cmp
+++ b/src/aura/spinnerPanel/spinnerPanel.cmp
@@ -1,3 +1,17 @@
+<!--
+****************************************************************************************************
+* spinnerPanel.cmp
+****************************************************************************************************
+* This is a shared component. Do not make modifications to this component without carefully
+* considering the impact this may have on existing applications/components/pages/etc. that use this
+* component.
+*
+* @author   Eugene Oates
+* @date     2018-03-20
+* @version  1.0.0
+*
+****************************************************************************************************
+-->
 <aura:component access="GLOBAL"
                 description="A simple container which can render a spinner overlay over its content.">
 	<!-- attributes -->
