Close all open dialogs when navigating between views.

--- a/src/aura/dialog/dialog.cmp
+++ b/src/aura/dialog/dialog.cmp
@@ -81,6 +81,7 @@
 
 	<!-- handlers -->
 	<aura:handler value="{!this}" name="init" action="{!c.init}" />
+	<aura:handler event="aura:locationChange" action="{!c.locationChange}" />
 	<!-- /handlers -->
 
 	<!-- methods -->
