--- a/src/aura/apex/apex.cmp
+++ b/src/aura/apex/apex.cmp
@@ -8,33 +8,19 @@
 *
 * @author   Eugene Oates
 * @date     2018-03-20
-* @version  1.0.0
+* @version  2.0.0
 *
 ****************************************************************************************************
 -->
 <aura:component access="GLOBAL"
                 description="A reusable component for executing Apex methods.">
-	<!-- handlers -->
-	<aura:handler value="{!this}" name="init" action="{!c.init}" />
-	<!-- /handlers -->
-
 	<!-- methods -->
 	<aura:method access="GLOBAL"
-	             name="execute"
-	             action="{!c.execute}"
-	             description="Executes an Apex method.">
-		<aura:attribute name="component" type="Aura.Component" required="true"
-		                description="The component that is executing the Apex method." />
-
-		<aura:attribute name="name" type="String" required="true"
-		                description="The name of the Apex method to execute." />
-
+	             name="getHandler"
+	             action="{!c.getHandler}"
+	             description="Returns a function that can be used as the callback for an Apex method.">
 		<aura:attribute name="opts" type="Object"
-		                description="Optional. An object used to specify execution options." />
+		                description="Optional. An object used to specify options such as callback functions." />
 	</aura:method>
 	<!-- /methods -->
-
-	<!-- component -->
-	<c:utils aura:id="utils" />
-	<!-- /component -->
 </aura:component>
