Another redesign of the apex component.
This design is more close to the original design in that the component can now take care of configuring and enqueuing the action. This was achieved by using a module pattern similar to the utils component. Instead of exposing the execute() method as an aura:method we have a getModule() aura:method which returns an object that has an execute() method. Because the execute() method is no longer an aura:method the framework does not interfere with the arguments passed to execute().

--- a/src/aura/apex/apex.cmp
+++ b/src/aura/apex/apex.cmp
@@ -8,19 +8,22 @@
 *
 * @author   Eugene Oates
 * @date     2018-03-20
-* @version  2.0.0
+* @version  1.1.0
 *
 ****************************************************************************************************
 -->
 <aura:component access="GLOBAL"
                 description="A reusable component for executing Apex methods.">
+	<!-- handlers -->
+	<aura:handler value="{!this}" name="init" action="{!c.init}" />
+	<!-- /handlers -->
+
 	<!-- methods -->
-	<aura:method access="GLOBAL"
-	             name="getHandler"
-	             action="{!c.getHandler}"
-	             description="Returns a function that can be used as the callback for an Apex method.">
-		<aura:attribute name="opts" type="Object"
-		                description="Optional. An object used to specify options such as callback functions." />
-	</aura:method>
+	<aura:method access="GLOBAL" name="getModule" action="{!c.getModule}"
+	             description="Returns an object which has the apex methods." />
 	<!-- /methods -->
+
+	<!-- component -->
+	<c:utils aura:id="utils" />
+	<!-- /component -->
 </aura:component>
