--- a/src/aura/inputDate/inputDate.cmp
+++ b/src/aura/inputDate/inputDate.cmp
@@ -49,6 +49,7 @@
 	               errorClass="{!v.errorClass}"
 	               controlId="{#globalId + '_input'}"
 	               label="{!v.label}"
+	               helpText="{!v.helpText}"
 	               required="{!v.required}"
 	               error="{!v.error}"
 	               errors="{!v.errors}">
