--- a/src/aura/toast/toast.cmp
+++ b/src/aura/toast/toast.cmp
@@ -1,6 +1,6 @@
 <!--
 ****************************************************************************************************
-* apex.cmp
+* toast.cmp
 ****************************************************************************************************
 * This is a shared component. Do not make modifications to this component without carefully
 * considering the impact this may have on existing applications/components/pages/etc. that use this
