No longer setting tabindex of lightning:helptext component.
Setting tabindex to -1 on a lightning:helptext component does not prevent keyboard focus.

--- a/src/aura/formElement/formElement.cmp
+++ b/src/aura/formElement/formElement.cmp
@@ -86,7 +86,7 @@
 		<!-- help text -->
 		<aura:if isTrue="{!not(empty(v.helpText))}">
 			<div class="{!'form-element-icon' + if(v.defaultStyles, ' slds-form-element__icon', '')}">
-				<lightning:helptext content="{!v.helpText}" tabindex="-1" />
+				<lightning:helptext content="{!v.helpText}" />
 			</div>
 		</aura:if>
 		<!-- /help text -->
