Added formElement attribute to input components.
Setting the formElement attribute to false prevents any Salesforce Lightning Design System (SLDS) styles being added to the input's container.

--- a/src/aura/inputCheckbox/inputCheckbox.cmp
+++ b/src/aura/inputCheckbox/inputCheckbox.cmp
@@ -40,7 +40,8 @@
 	               errorClass="{!v.errorClass}"
 	               required="{!v.required}"
 	               error="{!v.error}"
-	               errors="{!v.errors}">
+	               errors="{!v.errors}"
+	               defaultStyles="{!v.formElement}">
 		<span class="{!v.class + if(v.stacked, ' slds-checkbox_stacked', '') + ' slds-checkbox'}">
 			<input aura:id="input"
 			       id="{#globalId + '_input'}"
