--- a/src/aura/inputNumber/inputNumber.cmp
+++ b/src/aura/inputNumber/inputNumber.cmp
@@ -83,7 +83,8 @@
 	               helpText="{!v.helpText}"
 	               required="{!v.required}"
 	               error="{!v.error}"
-	               errors="{!v.errors}">
+	               errors="{!v.errors}"
+	               defaultStyles="{!v.formElement}">
 		{!v.left}
 
 		<input aura:id="input"
