Respect the formElement attribute when rendered on mobile devices.

--- a/src/aura/inputLookup/inputLookup.cmp
+++ b/src/aura/inputLookup/inputLookup.cmp
@@ -415,7 +415,8 @@
 			               helpText="{!v.helpText}"
 			               required="{!v.required}"
 			               error="{!v.error}"
-			               errors="{!v.errors}">
+			               errors="{!v.errors}"
+			               defaultStyles="{!v.formElement}">
 				<input aura:id="mobileSelectedItemInput"
 				       id="{#globalId + '_mobile_input'}"
 				       name="{!v.name}"
