Specify placeholder text for inputLookup when viewed on mobile devices.
Uses the same placeholder text as the desktop version.

--- a/src/aura/inputLookup/inputLookup.cmp
+++ b/src/aura/inputLookup/inputLookup.cmp
@@ -424,6 +424,7 @@
 				       value="{!if(empty(v.selectedItems), '', v.selectedItems[0].name)}"
 				       accesskey="{!v.accesskey}"
 				       class="slds-input"
+				       placeholder="{!if(empty(v.selectedSearchObject), '', 'Search ' + v.selectedSearchObject.labelPlural + '...')}"
 				       tabindex="-1"
 				       disabled="{!if(v.disabled, 'disabled', '')}"
 				       readonly="{!if(and(not(v.disabled), v.readonly), 'readonly', '')}"
