Updated the toast component to remove unnecessary aura:if components
Also, added the ability to include a custom body for the component via the v.body attribute.

--- a/src/aura/toast/toast.cmp
+++ b/src/aura/toast/toast.cmp
@@ -64,12 +64,9 @@
 				</aura:if>
 
 				<div class="slds-col slds-align-middle">
-					<aura:if isTrue="{!not(empty(v.title))}">
-						<h2 class="slds-text-heading_small">{!v.title}</h2>
-					</aura:if>
-					<aura:if isTrue="{!not(empty(v.message))}">
-						{!v.message}
-					</aura:if>
+					<h2 class="{!if(empty(v.title), 'slds-hide', 'slds-text-heading_small')}">{!v.title}</h2>
+					{!v.message}
+					{!v.body}
 				</div>
 			</div>
 		</div>
