Corrected misuse of undefined.
undefined means a variable has been declared but has not yet been assigned a value. On the other hand, null is an assignment value. It can be assigned to a variable as a representation of no value. Also, undefined and null are two distinct types: undefined is a type itself (undefined) while null is an object

--- a/src/aura/inputDate/inputDate.cmp
+++ b/src/aura/inputDate/inputDate.cmp
@@ -14,7 +14,7 @@
                 description="Allows the user to enter a date value.">
 	<!-- attributes -->
 	<aura:attribute access="GLOBAL" name="value" type="String"
-	                description="The value of the component. If a date has been entered it will always be in the format YYYY-MM-DD regardless of how it is formatted in the UI. If no date is selected this will be undefined." />
+	                description="The value of the component. If a date has been entered it will always be in the format YYYY-MM-DD regardless of how it is formatted in the UI. If no date is selected this will be null." />
 
 	<aura:attribute access="GLOBAL" name="format" type="String" default="MM/dd/yyyy"
 	                description="Controls how the date is formatted in the UI. This format will only be applied to the displayed date, not to the actual component's value attribute." />
